tests/NormalTests/paczka1/fuzzy1/61335116.err
Error in line 2: OZXCQ2rhrz8 S868 83,3
Error in line 29: S373 A791 23,1
Error in line 33: fRL1sr A791 63,8
Error in line 30: OZXCQ2rhrz8 A719 46,0
Error in line 32: S373 S373 38,0
Error in line 35: fRL1sr S373 73,1
